# octopus-bot

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BOT_FIX.md  BOT_TESTING.md  BROADCAST.md  CLAUDE.md  IMPLEMENTATION_NOTES.md  LOGGING.md  QUICKSTART.md  README.md  SETUP.md  STREAM_COMMAND.md  TEST_REPORT.md  TODO.md  implementaion_plan.md  main.py  pyproject.toml  test_bot_startup.py
config/: compare_ids.conf.example  config.example.yaml  health_check.conf.example
scripts/: README.compare_ids.md  backup.sh  compare_ids.conf  compare_ids.sh  deploy.sh  health_check.sh  status_report.sh  tail_logs.sh  test_args.sh
scripts/report_task_log/: Plan_report_task_log.md  README.md  check_compatibility.sh  output_monitor_prompt.md  practical_example.sh  report_task_log.sh  simulated_long_task.sh  test_report_task_log.sh
src/octopus_bot/: __init__.py  bot.py  config.py  server_ops.py
tests/: conftest.py  test_admin_only.py  test_bot.py  test_config.py  test_scheduler_integration.py  test_server_ops.py
